--- a/Assets/_Tutorial/Scripts/Tutorial.Scripts.asmdef
+++ b/Assets/_Tutorial/Scripts/Tutorial.Scripts.asmdef
@@ -5,6 +5,7 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:48d35e3a26632c844b3d551bf52ec3d9",
+        "GUID:f94a82ee666680945b5fb15c65c4b0a7",
         "GUID:7495fe3af4aee0d469d20417574c92f9",
         "GUID:6f4e095c0a023a74fad000754a0ddaaa",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
