--- a/Assets/_Game/Scripts/Core/Game.Scripts.Core.asmdef
+++ b/Assets/_Game/Scripts/Core/Game.Scripts.Core.asmdef
@@ -4,6 +4,8 @@
     "references": [
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:f94a82ee666680945b5fb15c65c4b0a7",
         "GUID:7495fe3af4aee0d469d20417574c92f9",
         "GUID:6f4e095c0a023a74fad000754a0ddaaa",
         "GUID:8dcc8b5e145aef8449406c6a76d73c18",
