Implemented a couple of spawners.

--- a/Assets/_Game/Scripts/Editor/Game.Scripts.Editor.asmdef
+++ b/Assets/_Game/Scripts/Editor/Game.Scripts.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Game.Scripts.Editor",
     "rootNamespace": "Game.Scripts.Editor",
-    "references": [],
+    "references": [
+        "GUID:48d35e3a26632c844b3d551bf52ec3d9"
+    ],
     "includePlatforms": [
         "Editor"
     ],
